--- a/include/linux/netfilter/Makefile.am
+++ b/include/linux/netfilter/Makefile.am
@@ -1,5 +1,6 @@
 noinst_HEADERS = 	nf_conntrack_common.h		\
 			nf_conntrack_tuple_common.h	\
+			nf_log.h			\
 			nf_nat.h			\
 			nf_tables.h			\
 			nfnetlink.h
