include: add tcpopt.h to Makefile.am
Add this new header filer otherwise make distcheck breaks.

Signed-off-by: Pablo Neira Ayuso <pablo@netfilter.org>

--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -12,6 +12,7 @@ noinst_HEADERS = 	cli.h		\
 			nftables.h	\
 			payload.h	\
 			rbtree.h	\
+			tcpopt.h	\
 			statement.h	\
 			ct.h		\
 			erec.h		\
